PulseAudio: disable fix-rate when negotiating pass-through (refs #9309)

API design bug in PulseAudio...